# ingenic_videocap

./: .gitignore  CMakeLists.txt  README.md  settings.json
sql/: README.md
sql/videocap/: initial.sql  manage.py
sql/videocap/openmiko/: apps.py  models.py
sql/videocap/openmiko/migrations/: 0001_initial.py  0002_auto_20211130_0053.py  0003_session_user.py
sql/videocap/videocap/: asgi.py  settings.py  urls.py  wsgi.py
src/: autonight.c  capture.c  capture.h  configparser.c  getimage.c  log.c  log.h  main.c  sqlqueries.c  videoconfig.c
src/api/: README.md  api.c
src/db/: db.c  db.h
src/facil.io/: CMakeLists.txt
src/facil.io/docs/_SOURCE/0.7.x/: riskyhash.md
src/include/: capture.h  configparser.h  log.h  models.h  streamsettings.h
tests/: CMakeLists.txt
